--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -626,6 +626,9 @@
     "error_loading_orderbook_failed": "Error while loading the orderbook. Your current local setup might not support fetching the orderbook. Reason: {{ reason }}",
     "text_offer_type_absolute": "absolute",
     "text_offer_type_relative": "relative",
+    "button_reload_title": "Reload",
+    "button_refresh_text": "Clear & reload",
+    "button_refresh_title": "Clear entries and reload",
     "label_search": "Search",
     "placeholder_search": "Search",
     "text_orderbook_filter_count": "{{ filterCount }} entries match given search criteria",
