feat: update display mode toggle titles and add refresh translation

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -2,6 +2,7 @@
   "global": {
     "loading": "Loading",
     "retry": "Retry",
+    "refresh": "Refresh",
     "button_copy_text": "Copy",
     "button_copy_text_confirmed": "Copied",
     "next": "Next",
@@ -208,9 +209,7 @@
     "jars_title": "Wallet distribution",
     "jars_title_popover": "Jars are used to segregate your sats into multiple buckets that are disconnected from each other, which aids privacy.",
     "account_heading_external_addresses": "External addresses for deposits",
-    "account_heading_internal_addresses": "Internal Addresses",
-    "toggle_display_mode": "Click to toggle Sats/Bitcoin",
-    "refresh": "Refresh"
+    "account_heading_internal_addresses": "Internal Addresses"
   },
   "settings": {
     "section_title_display": "Display",
