feat: add i18n support for JamLanding component

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -1,6 +1,8 @@
 {
   "global": {
     "loading": "Loading",
+    "retry": "Retry",
+    "refresh": "Refresh",
     "button_copy_text": "Copy",
     "button_copy_text_confirmed": "Copied",
     "next": "Next",
