Feat: Add translations to receive page

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -385,7 +385,9 @@
     "subtitle": "Send sats to the address below to fund your wallet.",
     "error_loading_address_failed": "Unable to get new address.",
     "error_copy_address_failed": "Could not copy address.",
+    "error_share_address_failed": "Could not share address",
     "button_copy_address": "Copy",
+    "button_share_address": "Share",
     "text_copy_address_confirmed": "Copied",
     "button_settings": "Receive options",
     "label_source_jar": "Receive to",
@@ -393,7 +395,8 @@
     "placeholder_amount_input": "Enter amount in sats or BTC...",
     "feedback_invalid_amount": "Please provide a valid amount.",
     "button_new_address": "Get new address",
-    "text_getting_address": "Getting new address"
+    "button_download_qr": "Save QR Code to file",
+    "text_getting_address": "Getting new address."
   },
   "earn": {
     "title": "Earn",
