--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -223,6 +223,7 @@
     "use_btc": "Display amounts in bitcoin",
     "use_dark_theme": "Switch to dark theme",
     "use_light_theme": "Switch to light theme",
+    "label_select_language": "Language",
     "text_help_translate": "Missing your language? Help us out!",
     "show_seed": "Show seed phrase",
     "hide_seed": "Hide seed phrase",
@@ -233,7 +234,18 @@
     "button_locking_wallet": "Locking...",
     "button_switch_wallet": "Switch wallet",
     "error_loading_seed_failed": "Could not retrieve seed phrase.",
+    "seed_modal_title": "Verify Password",
+    "seed_modal_password_description": "Please enter your wallet password to view the seed phrase.",
+    "seed_modal_password_label": "Password",
+    "seed_modal_password_placeholder": "Enter your password",
+    "seed_modal_incorrect_password": "Incorrect password. Please try again.",
+    "seed_modal_verify_button": "Verify",
+    "seed_modal_seed_title": "Your Seed Phrase",
     "seed_modal_info_text": "Please write down your seed phrase and password! Without this information you will not be able to access and recover your wallet!",
+    "seed_modal_error": "Error while retrieving the seed phrase.",
+    "seed_modal_no_data": "No seed phrase available.",
+    "seed_modal_warning_title": "Important Security Warning",
+    "seed_modal_warning_message": "Never share your seed phrase! Anyone with access to these words can control your wallet and will steal all of your funds.",
     "documentation": "Documentation",
     "github": "GitHub",
     "matrix": "Matrix",
@@ -273,7 +285,9 @@
       "text_button_submit": "Save",
       "text_button_submitting": "Saving...",
       "error_loading_fee_config_failed": "Error while loading fee config values.",
-      "error_saving_fee_config_failed": "Error while saving fee config values. Reason: {{ reason }}"
+      "error_saving_fee_config_failed": "Error while saving fee config values. Reason: {{ reason }}",
+      "success_message": "Fee settings updated successfully.",
+      "error_message": "Failed to update fee settings. Please try again."
     }
   },
   "rescan_chain": {
@@ -386,9 +400,7 @@
     "error_loading_address_failed": "Unable to get new address.",
     "error_copy_address_failed": "Could not copy address.",
     "error_share_address_failed": "Could not share address",
-    "button_copy_address": "Copy",
     "button_share_address": "Share",
-    "text_copy_address_confirmed": "Copied",
     "button_settings": "Receive options",
     "label_source_jar": "Receive to",
     "label_amount_input": "Amount",
